--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,6 +23,7 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco/
   build:
+   unit-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
