--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,8 +23,8 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco/
   build:
-   unit-test:
     runs-on: ubuntu-latest
+    needs: unit-test
     steps:
     - uses: actions/checkout@v2
       with:
