--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,7 @@ jobs:
 
   code-analisys:
     runs-on: ubuntu-latest
+    needs: unit-test
     
     steps:
     - uses: actions/checkout@v2
@@ -57,7 +58,7 @@ jobs:
         
   build:
     runs-on: ubuntu-latest
-    needs: unit-test
+    needs: code-analisys
     steps:
     - uses: actions/checkout@v2
       with:
