--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,32 +60,27 @@ jobs:
     runs-on: ubuntu-latest
     needs: code-analisys
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Package
-      run: mvn package  
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          package: '*.jar'
-      - name: Publish package
-        run: mvn --batch-mode deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+        - name: Build with Maven
+          run: mvn -B package -DskipTests --file pom.xml      
+        - name: Display structure of downloaded files
+          run: ls -R
+          working-directory: target/
+        - name: Upload JAR
+            #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
+          uses: actions/upload-artifact@v2
+          with:
+            #Set artifact name
+            name: artifact
+            #From this path
+            path: ./target/demo-0.0.2.7-SNAPSHOT.jar
+   
           
   deploy-STG:
       runs-on: ubuntu-latest
-      needs: publish
+      needs: build
       environment:
         name: stg
       
