--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -171,7 +171,7 @@ jobs:
     if: github.ref == 'refs/heads/main'    
     environment:
       name: AZURE-PRO        
-      url: https://devopsfiap-on-app.azurewebsites.net/
+      url: https://devopgithub.azurewebsites.net
     steps:
        - name: Download JAR
          uses: actions/download-artifact@v3
@@ -181,6 +181,6 @@ jobs:
        - name: DeployAzure   
          uses: azure/webapps-deploy@v2
          with:
-            app-name: devopsfiap-on-app
+            app-name: DevOpGithub
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
             package: '${{ github.workspace }}/target/*.jar'
