--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -210,8 +210,8 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           wait_for_environment_recovery: 90
           use_existing_version_if_available: false
-          application_name: DevopsFiap-0n
-          environment_name: DevopsFiap-0n-env-1
+          application_name: DevopsFiap-on
+          environment_name: DevopsFiap-on-env1
           version_label: ${{github.SHA}}
           region: us-east-1
           deployment_package: ./target/demo-0.0.2.7-SNAPSHOT.jar
