--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -193,7 +193,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     environment:
       name: AWS-PRO
-      url: http://devopsfiap-0n-env-1.eba-a9357rgy.us-east-1.elasticbeanstalk.com/
+      url: http://devopsfiap-on-env-1.eba-a9357rgy.us-east-1.elasticbeanstalk.com/
     steps:
       - name: Download JAR
         uses: actions/download-artifact@v3
